cmake_minimum_required(VERSION 3.28)
project(Programming_3_DiscBoard_1_samplecode)

set(CMAKE_CXX_STANDARD 17)

add_executable(Programming_3_DiscBoard_1_samplecode SimpleProgram.cpp
        cmake-build-debug/CMakeFiles/Programming_3_DiscBoard_1_samplecode.dir/Programming3CriticalThinking2.cpp
        cmake-build-debug/CMakeFiles/Programming_3_DiscBoard_1_samplecode.dir/memory_mgmt.cpp
        cmake-build-debug/CMakeFiles/Programming_3_DiscBoard_1_samplecode.dir/memory_mgmt.h
)
